--- a/index.html
+++ b/index.html
@@ -317,23 +317,41 @@
         <!-- <div class="row"> -->
           <div class="col-md-8"><div class="container  bg-body-secondary p-3 rounded-3">
     <div class="mb-3">
+      <!-- <form action="https://formspree.io/f/xqkojpvw"
+      method="post">
+      <div class="form-group">
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" id="email" name="email">
+      </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd" name="password">
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+      </div>
+      <button type="submit" class="btn btn-light">Submit</button>
+    </form> -->
+    <form action="https://formspree.io/f/xqkojpvw"
+    method="post">
       <label for="exampleFormControlInput1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      <input type="email" class="form-control" id="exampleFormControlInput1"  name="email" placeholder="name@example.com">
     </div>
     <label for="inputPassword5" class="form-label">Password</label>
-<input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
+<input type="password" id="inputPassword5" class="form-control" name="password" aria-labelledby="passwordHelpBlock">
 <div id="passwordHelpBlock" class="form-text">
   Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
 </div><br>
     <div class="mb-3">
       <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <textarea class="form-control" id="exampleFormControlTextarea1" name="Message" rows="3"></textarea>
     </div>
     <div><input class="btn btn-light text-center" type="submit" value="Submit">
     </div>
   </div>
 </div>
       </div>
+      </form>
   
     </section>
     <footer id="footer-width">
