--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <div class="h-100 p-5 bg-body-tertiary border rounded-3">
                   <h2>Languages</h2>
                   <p><img src="./assets/images/css-3.png" alt="css3" width="60" height="auto">
-                    <img src="./assets/images/html-5.png" alt="css3" width="60" height="auto">
+                    <img src="./assets/images/html-5.png" alt="html-5" width="60" height="auto">
                     <img src="./assets/images/java-script.png" alt="javascript" width="60" height="auto"></p>
                   </div>
                      </div>
@@ -118,6 +118,8 @@
       </div>
     </section>
 <hr>
+
+     <!-- SOFT SKILLS SECTION -->
     <div class="container">
       <div>
         <h1>Soft Skills</h1>
