--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container-fluid overlay w-100 h-100">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                      <div class="bgtext"><h4>Hi! I'm Ayesha Galant</h>
+                      <div class="bgtext"><h4>Hi! I'm Ayesha Galant</h4>
                       <p>I am an aspiring software developer</p>
                     </div>
                   </div>
@@ -107,10 +107,10 @@
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 img-hover-zoom">
             <img class="lang rounded-3" src="./assets/images/lang1.jpg" alt="language" width="300px" height="auto">
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 img-hover-zoom">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 image-hover-zoom">
           <img  class="hobbies rounded-3" src="./assets/images/hobbies.jpg" alt="hobbies" width="300px" height="auto">
-          <div class="Hobbies"><h4>Hobbies</h4><p>My interests are reading, gaming and challenging people to chess matches.
-             I enjoy learning and spend my time debugging code</p></div>
+          <div class="text">Hobbies - My interests are reading, gaming and challenging people to chess matches.
+             I enjoy learning and spend my time debugging code.</div>
         </div>
           </div>
 
@@ -378,7 +378,7 @@
                 </ul>
               </nav>
             </div>
-          </div>&COPY;Completed by Ayesha Galant 2023
+          </div>
     </footer>
     
 
