--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <div class="container-fluid overlay w-100 h-100">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                      <div class="bgtext"><h4>Hi! I'm Ayesha Galant</h4>
-                      <p>I am an aspiring software developer</p>
+                      <div class="bgtext"><h4>Hi! I'm Ayesha Galant
+                      <p>I am an aspiring software developer.</h4></p>
                     </div>
                   </div>
                     </div>
